--- a/file_scartati/index_menu_old.html
+++ b/file_scartati/index_menu_old.html
@@ -7,7 +7,7 @@
     <title>Beerstrot | Menù</title>
     <meta name="description" content="Gli Hamburger, di nostra produzione, contengono solo carne di vacca marchigiana di prima scelta e l'arte della perfetta macinatura. Per creare i nostri Hamburger utilizziamo verdure di stagione e prodotti di piccole realtà marchigiane."/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
-    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2022"/>
+    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2021"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
     <meta name="twitter:title" content="Ca' Vecchia Beerstrot Menù"/>
@@ -56,17 +56,19 @@
 			</li>
         </ul>
         <section class="top-bar-section">
-			<ul class="right">
-				<li class="divider"></li>
-				<li><a href="https://www.beerstrot.it/prenota/">Prenota</a></li>
-				<li class="divider"></li>
-				<li><a href="https://www.beerstrot.it/menu/">Menù</a></li>
-				<li class="divider"></li>
-				<li><a href="https://www.beerstrot.it/asporto/">Asporto</a></li>
-				<li class="divider"></li>
-				<li><a href="https://www.beerstrot.it/contatti/">Contatti</a></li>
-			</ul>
-		</section>
+            <ul class="right">
+                <li class="divider"></li>
+                <li><a href="https://www.beerstrot.it/menu/">Menù</a></li>
+                <li class="divider"></li>
+                <li><a href="https://www.beerstrot.it/asporto/">Asporto</a></li>
+                <li class="divider"></li>
+                <li><a href="https://www.beerstrot.it/social/">Social</a></li>
+                <li class="divider"></li>
+                <li><a href="https://www.beerstrot.it/contatti/">Contatti</a></li>
+                <li class="divider"></li>
+                <li><a href="https://www.beerstrot.it/blog/">Blog</a></li>
+            </ul>
+        </section>
     </nav>
 <!-- fine navbar con hamburger -->
     <img class="image-hero" src="https://www.beerstrot.it/asset/img/large/menu.jpg" alt="Ca' Vecchia Beerstrot Hamburger doppio"/>
@@ -379,26 +381,26 @@
                             <h3>Helles</h3>
                             <p>Bionda tedesca non amara 4,9% <br><em>Birrificio Gambrinus</em></p>
                         </li>
-                        <li>
+                       <!-- <li>
                             <h3>Italicum</h3>
                             <p>Bionda fruttata 5,0% <br><em>Birrificio dei Castelli</em></p>
-                        </li>
+                        </li> -->
                        <li>
                             <h3>Bock</h3>
                             <p>Rossa stile tedesco dolce 6,5% <br><em>Birrificio Forst</em></p>
                         </li>
-                        <li>
+                        <!-- <li>
                             <h3>Sofronia</h3>
                             <p>Blanche con ibisco 5% <br><em>Birrificio MC-77</em></p>
-                        </li>
+                        </li> -->
                         <!-- <li>
                             <h3>Palmares</h3>
                             <p>Rossa stile inglese 5,6% <br><em>Birrificio dei Castelli</em></p>
                         </li>  -->
-                      <!--  <li>
+                        <li>
                             <h3>Ape Regina</h3>
                             <p>Blonde ale al miele 6,9% <br><em>Birrificio MC-77</em></p>
-                        </li> -->
+                        </li>
                         <li>
                             <h3>Thee Bitter</h3>
                             <p>Bitter ale ambrata 4,2% <br><em>Birrificio Resina</em></p>
@@ -407,14 +409,14 @@
                             <h3>Effecto Placebo</h3>
                             <p>IPA fruttata leggera 4% <br><em>Birrificio dei Castelli</em></p>
                         </li> -->
-                        <!-- <li>
+                        <li>
                             <h3>Mirabilia</h3>
                             <p>American Pale Ale 5,2% <br><em>Birrificio dei Castelli</em></p>
-                        </li> -->
-                        <li>
+                        </li>
+                       <!-- <li>
                             <h3>Brevis Furor</h3>
                             <p>IPA 6,3% <br><em>Birrificio dei Castelli</em></p>
-                        </li>
+                        </li> -->
                        <!-- <li>
                             <h3>Punto</h3>
                             <p>Session IPA 3,9% <br><em>Birrificio MC-77</em></p>
@@ -629,8 +631,8 @@
                     <h2 class="subheader">Drinks</h2>
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Spritz <span class="price">5</span></h3>
-                            <p>Aperol, Campari</p>
+                            <h3>Spritz <span class="price">5,5</span></h3>
+                            <p>Campari</p>
                         </li>
                         <li>
                             <h3>Gin Tonic Ginpilz <span class="price">8</span></h3>
@@ -802,9 +804,9 @@
             <div class="large-12 columns">
                 <ul class="small-block-grid-2 medium-block-grid-4 large-block-grid-4">
                     <li>
-                        <h4 class="subheader">Contatti</h4>
-                        <p><a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></p>
+                        <h4 class="subheader">Prenota</h4>
                         <p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
+                        <p><a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></p>
                     </li>
                     <!-- <li>
                        	<h4 class="subheader">Orari</h4>
@@ -862,16 +864,17 @@
 <!-- fine footer -->
 <!-- inizio navbar footer -->
     <div class="row footer">
-		<div class="small-12 medium-12 large-12 columns">
-			<p class="links">
-				<a href="https://www.beerstrot.it">Home</a>
-				<a href="https://www.beerstrot.it/prenota/">Prenota</a>
-				<a href="https://www.beerstrot.it/menu/">Menù</a>
-				<a href="https://www.beerstrot.it/asporto/">Asporto</a>
-				<a href="https://www.beerstrot.it/contatti/">Contatti</a>
-			</p>
-		</div>
-	</div>
+        <div class="small-12 medium-12 large-12 columns">
+            <p class="links">
+                <a href="https://www.beerstrot.it">Home</a>
+                <a href="https://www.beerstrot.it/menu/">Menù</a>
+                <a href="https://www.beerstrot.it/asporto/">Asporto</a>
+                <a href="https://www.beerstrot.it/social/">Social</a>
+                <a href="https://www.beerstrot.it/contatti/">Contatti</a>
+                <a href="https://www.beerstrot.it/blog/">Blog</a>
+            </p>
+        </div>
+    </div>
 <!-- fine navbar footer-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
