--- a/menu/index.html
+++ b/menu/index.html
@@ -7,7 +7,7 @@
     <title>Beerstrot | Menù</title>
     <meta name="description" content="Gli Hamburger, di nostra produzione, contengono solo carne di vacca marchigiana di prima scelta e l'arte della perfetta macinatura. Per creare i nostri Hamburger utilizziamo verdure di stagione e prodotti di piccole realtà marchigiane."/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
-    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2021"/>
+    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2022"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
     <meta name="twitter:title" content="Ca' Vecchia Beerstrot Menù"/>
@@ -56,19 +56,17 @@
 			</li>
         </ul>
         <section class="top-bar-section">
-            <ul class="right">
-                <li class="divider"></li>
-                <li><a href="https://www.beerstrot.it/menu/">Menù</a></li>
-                <li class="divider"></li>
-                <li><a href="https://www.beerstrot.it/asporto/">Asporto</a></li>
-                <li class="divider"></li>
-                <li><a href="https://www.beerstrot.it/social/">Social</a></li>
-                <li class="divider"></li>
-                <li><a href="https://www.beerstrot.it/contatti/">Contatti</a></li>
-                <li class="divider"></li>
-                <li><a href="https://www.beerstrot.it/blog/">Blog</a></li>
-            </ul>
-        </section>
+			<ul class="right">
+				<li class="divider"></li>
+				<li><a href="https://www.beerstrot.it/prenota/">Prenota</a></li>
+				<li class="divider"></li>
+				<li><a href="https://www.beerstrot.it/menu/">Menù</a></li>
+				<li class="divider"></li>
+				<li><a href="https://www.beerstrot.it/asporto/">Asporto</a></li>
+				<li class="divider"></li>
+				<li><a href="https://www.beerstrot.it/contatti/">Contatti</a></li>
+			</ul>
+		</section>
     </nav>
 <!-- fine navbar con hamburger -->
     <img class="image-hero" src="https://www.beerstrot.it/asset/img/large/menu.jpg" alt="Ca' Vecchia Beerstrot Hamburger doppio"/>
@@ -381,7 +379,7 @@
                             <h3>Helles</h3>
                             <p>Bionda tedesca non amara 4,9% <br><em>Birrificio Gambrinus</em></p>
                         </li>
-                       <!-- <li>
+                        <!-- <li>
                             <h3>Italicum</h3>
                             <p>Bionda fruttata 5,0% <br><em>Birrificio dei Castelli</em></p>
                         </li> -->
@@ -413,7 +411,7 @@
                             <h3>Mirabilia</h3>
                             <p>American Pale Ale 5,2% <br><em>Birrificio dei Castelli</em></p>
                         </li>
-                       <!-- <li>
+                        <!-- <li>
                             <h3>Brevis Furor</h3>
                             <p>IPA 6,3% <br><em>Birrificio dei Castelli</em></p>
                         </li> -->
@@ -631,8 +629,8 @@
                     <h2 class="subheader">Drinks</h2>
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Spritz <span class="price">5,5</span></h3>
-                            <p>Campari</p>
+                            <h3>Spritz <span class="price">5</span></h3>
+                            <p>Aperol, Campari</p>
                         </li>
                         <li>
                             <h3>Gin Tonic Ginpilz <span class="price">8</span></h3>
@@ -804,9 +802,9 @@
             <div class="large-12 columns">
                 <ul class="small-block-grid-2 medium-block-grid-4 large-block-grid-4">
                     <li>
-                        <h4 class="subheader">Prenota</h4>
+                        <h4 class="subheader">Contatti</h4>
+                        <p><a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></p>
                         <p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
-                        <p><a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></p>
                     </li>
                     <!-- <li>
                        	<h4 class="subheader">Orari</h4>
@@ -864,17 +862,16 @@
 <!-- fine footer -->
 <!-- inizio navbar footer -->
     <div class="row footer">
-        <div class="small-12 medium-12 large-12 columns">
-            <p class="links">
-                <a href="https://www.beerstrot.it">Home</a>
-                <a href="https://www.beerstrot.it/menu/">Menù</a>
-                <a href="https://www.beerstrot.it/asporto/">Asporto</a>
-                <a href="https://www.beerstrot.it/social/">Social</a>
-                <a href="https://www.beerstrot.it/contatti/">Contatti</a>
-                <a href="https://www.beerstrot.it/blog/">Blog</a>
-            </p>
-        </div>
-    </div>
+		<div class="small-12 medium-12 large-12 columns">
+			<p class="links">
+				<a href="https://www.beerstrot.it">Home</a>
+				<a href="https://www.beerstrot.it/prenota/">Prenota</a>
+				<a href="https://www.beerstrot.it/menu/">Menù</a>
+				<a href="https://www.beerstrot.it/asporto/">Asporto</a>
+				<a href="https://www.beerstrot.it/contatti/">Contatti</a>
+			</p>
+		</div>
+	</div>
 <!-- fine navbar footer-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
