--- a/prenota/index_modifica_prenotazione.html
+++ b/prenota/index_modifica_prenotazione.html
@@ -85,14 +85,10 @@
     <header class="row">
         <div class="medium-12 large-12 columns">
             <h1 id="ttitle">Modica la Prenotazione</h1>
+            <p>La prenotazione viene modificata solo quando clicchi il pulsante "Modifica Prenotazione"</p>
             <br>
         </div>
     </header>
-    <div class="row">
-            <div class="medium-12 large-12 columns">
-                <p>La prenotazione viene modificata solo quando clicchi il tasto "modifica prenotazione"</p>
-            </div>
-        </div>
     <div id="loading" hidden><br/><br/><div style="padding-top:25%">Ricerco disponibilità.</div></div>
     <div class="row" id="notesDiv" hidden>
         <div class="small-6 medium-4 columns" id="innerNotesDiv_" >
