--- a/prenota/consulta_no_cancellato.html
+++ b/prenota/consulta_no_cancellato.html
@@ -75,7 +75,8 @@
         </div>
         <div class="row">
             <div class="small-12 medium-12 columns">
-                <fieldset>
+                <p><strong>La prenotazione non è stata cancellata.</strong> <br>Se hai bisogno di modificare o cancellare la prenotazione, puoi sempre usare i link della vecchia email di conferma ricevuta al momento della prenotazione.</p>
+                <fieldset class="extra-space">
                      <legend>Dettagli della prenotazione</legend>
                         <ul class="no-bullet" id="infoList">
                           <li><strong>Nome: </strong><span id="name"></span></li>
@@ -92,9 +93,6 @@
                             <li><strong>Ho un cane o più: </strong><span id="dog"></span></li>
                         </ul>
                 </fieldset>
-            </div>
-            <div class="small-12 medium-12 columns">
-                <p>La prenotazione non è stata cancellata. <br>Se hai bisogno di modificare o cancellare la prenotazione, puoi sempre usare i link della vecchia email di conferma.</p>
             </div>
         </div>
     </div>
