solved some issues

--- a/prenota/index.html
+++ b/prenota/index.html
@@ -93,7 +93,7 @@
         <div class="small-6 medium-4 columns" id="innerNotesDiv_" >
             <div>
                 <label>Seleziona giorno
-                    <input tabindex="5" id="from2" type="button extra-large">
+                    <input tabindex="5" id="from2" type="text">
                 </label>
             </div>
         </div>
@@ -316,7 +316,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.css"/ >
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
-    <script src="https://www.beerstrot.it/js/prenota.min.js"></script>
+    <script src="../js/prenota.js"></script>
 <!-- <div id="myModal" style="border:4px lightgrey solid" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
   <p class="lead" id="modalLead">Your couch.  It is mine.</p>
   <a class="close-reveal-modal" aria-label="Close">&#215;</a>
