--- a/prenota/consulta.html
+++ b/prenota/consulta.html
@@ -63,7 +63,7 @@
 <!-- fine navbar con hamburger -->
     <header class="row">
         <div class="medium-12 large-12 columns">
-            <h1>Tavolo riservato. Grazie</h1>
+            <h1 id="ttitle">Tavolo riservato. Grazie</h1>
             <br>
         </div>
     </header>
@@ -76,7 +76,7 @@
         <div class="row">
             <div class="small-12 medium-12 columns">
                 <fieldset>
-                     <legend>Dettagli della prenotazione</legend>
+                     <legend id="tlegend">Dettagli della prenotazione</legend>
                         <ul class="no-bullet" id="infoList">
                           <li><strong>Nome: </strong><span id="name"></span></li>
                           <li><strong>Telefono: </strong><span id="telephone"></span></li>
@@ -183,7 +183,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
     <script src="https://www.beerstrot.it/js/app.min.js"></script>
-    <script src="../js/prenota.min.js"></script>
+    <script src="../js/prenota.js"></script>
 <div id="myModal" style="border:4px lightgrey solid" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
   <p class="lead" id="modalLead">Cancella la prenotazione?</p>
     <p id="modalText"></p>
