--- a/prenota/index.html
+++ b/prenota/index.html
@@ -83,7 +83,7 @@
     </nav>
 <!-- fine navbar con hamburger -->
     <header class="row">
-        <div class="medium-12 large-12 columns">
+        <div class="medium-12 large-12 columns" id="hdiv">
             <h1 id="ttitle">Riserva un Tavolo</h1>
             <br>
         </div>
