--- a/prenota/consulta.html
+++ b/prenota/consulta.html
@@ -98,6 +98,7 @@
             <div class="small-12 medium-6 large-6 columns">
                 <a role="button" id="cancel" class="button right">Cancella</a>
                 <a role="button" id="modify" class="button left">Modifica</a>
+                <a role="button" id="new" class="button left" href="./">Fai una nuova prenotazione</a>
             </div>
         </div>
     </div>
@@ -189,9 +190,9 @@
     <p id="modalText"></p>
 
         <div class="row extra-space" style="margin-bottom:5%">
-            <div class="small-12 medium-6 large-6 columns">
-                <a role="button" id="no" class="button right">No</a>
-                <a role="button" id="yes" class="button left">Sì</a>
+            <div class="small-12 medium-12 large-12 columns">
+                <a role="button" id="no" class="button right">No, non cancellare</a>
+                <a role="button" id="yes" class="button left">Sì, cancella</a>
             </div>
         </div>
   <a class="close-reveal-modal" aria-label="Close" id="close-modal">&#215;</a>
