--- a/prenota/index.html
+++ b/prenota/index.html
@@ -35,27 +35,6 @@
         src="https://www.facebook.com/tr?id=770709373057085&ev=PageView&noscript=1"/>
     </noscript>
 <!-- End Facebook Pixel Code -->
-<!-- spostato in app.css
-<style type="text/css">
-.error1 {
-  display: none!important;
-}
-#loading {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 100;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(192, 192, 192, 0.9);
-  background-image: url(../asset/img/loading.gif);
-  background-repeat: no-repeat;
-  background-position: center;
-  text-align: center;
-  font-size: 24px;
-}
-</style> -->
 </head>
 <body>
    <nav class="top-bar" data-topbar role="navigation">
@@ -115,24 +94,20 @@
         </div>
     </div>
     <div class="panel-home-2n" id="prenotaDiv" hidden>
-      <div class="row">
-        <div class="columns small-6" id="innerInfoDiv"></div>
-        <div class="columns small-6" id="buttonInfoDiv">
-          <div class="row" style="padding:10%">
-            <button class="success radius" id="modBtn">Modifica</button>
-          </div>
-          <div class="row" style="padding-left:10%">
-            <button class="radius" id="cancBtn">Cancella</button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="panel-home-2n form">
         <div class="row">
-            <div class="medium-12 large-12 columns">
-                <h2> </h2>
+            <div class="columns small-6" id="innerInfoDiv">
+            </div>
+            <div class="columns small-6" id="buttonInfoDiv">
+                <div class="row" style="padding:10%">
+                    <button class="success radius" id="modBtn">Modifica</button>
+                </div>
+                <div class="row" style="padding-left:10%">
+                    <button class="radius" id="cancBtn">Cancella</button>
+                </div>
             </div>
         </div>
+    </div>
+    <div class="panel-home-2n form">
         <div class="row">
             <div class="small-6 medium-3 columns ">
                 <label>Quale giorno*
