--- a/prenota/index.html
+++ b/prenota/index.html
@@ -169,7 +169,7 @@
         <div class="row">
             <div class="small-12 medium-6 columns end">
                 <label>Note
-                    <textarea maxlength="100" id="obs" placeholder="Intolleranze, accesso con sedia a rotelle, ..."></textarea>
+                    <textarea maxlength="200" id="obs" placeholder="Intolleranze, accesso con sedia a rotelle, ..."></textarea>
                 </label>
             </div>
         </div>
@@ -206,12 +206,12 @@
         <div class="row">
             <div class="small-12  medium-5 columns extra-space-hero">
                 <label>Email*
-                    <input type="email" class="required email error" id="email" placeholder="esempio@esempio.it" />
+                    <input type="email" class="required email error" id="email" placeholder="esempio@esempio.it" maxlength="200"/>
                   </label>
             </div>
             <div class="small-6  medium-3 columns end extra-space-hero">
                 <label>Telefono*
-                    <input type="tel" class="required error" id="telephone" placeholder="3332221111" maxlength="25" />
+                    <input type="tel" class="required error" id="telephone" placeholder="3332221111" maxlength="35" />
                 </label>
             </div>
         </div>
