--- a/prenota/index.html
+++ b/prenota/index.html
@@ -333,7 +333,7 @@
     <a class="close-reveal-modal" aria-label="Close">&#215;</a>
 </div>
 <div id="myModal2" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
-    <p class="lead extra-space-modal" id="modalLead">Vuoi cancellare la prenotazione?</p>
+    <p class="lead extra-space-modal" id="modalLead2">Vuoi cancellare la prenotazione?</p>
     <p id="modalText"></p>
         <div class="row extra-space" style="margin-bottom:5%">
             <div class="small-12 medium-12 large-12 columns">
