--- a/prenota/index.html
+++ b/prenota/index.html
@@ -336,9 +336,11 @@
     <p class="lead extra-space-modal" id="modalLead2">Vuoi cancellare la prenotazione?</p>
     <p id="modalText"></p>
         <div class="row extra-space" style="margin-bottom:5%">
-            <div class="small-12 medium-12 large-12 columns">
+            <div class="large-6 columns">
                 <a role="button" id="no" class="button small right">No, non cancellare</a>
-                <a role="button" id="yes" class="button small left">Sì, cancella</a>
+            </div>
+            <div class="large-6 columns">
+                <a role="button" id="yes" class="button small left">Sì, cancellaaa</a>
             </div>
         </div>
   <a class="close-reveal-modal" aria-label="Close" id="close-modal">&#215;</a>
