--- a/menu/index.html
+++ b/menu/index.html
@@ -439,10 +439,10 @@
                             <h3>Marina</h3>
                             <p>IPA Ambrata 6,2% <br><em>Birrificio Mukkeller</em></p>
                         </li> -->
-                        <!-- <li>
+                        <li>
                             <h3>Yakima Trip</h3>
                             <p>American IPA 7% <br><em>Birrificio MC-77</em></p>
-                        </li> -->
+                        </li>
                         <!-- <li>
                             <h3>Extrema Ratio</h3>
                             <p>Doppia IPA 7,4% <br><em>Birrificio dei Castelli</em></p>
@@ -455,10 +455,10 @@
                             <h3>Nonnukka</h3>
                             <p>IPA Leggera 4,8% <br><em>Birrificio Mukkeller</em></p>
                         </li> -->
-                        <li>
+                        <!--<li>
                             <h3>Hattori Hanzo</h3>
                             <p>Doppia IPA 8,3% <br><em>Birrificio Mukkeller</em></p>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -715,7 +715,7 @@
                             <h3>Sibilla, Tonico <span class="price">4</span></h3>
                         </li>
                         <li>
-                            <h3>Varnelli, Anisetta Meletti, Moka<span class="price">3,5</span></h3>
+                            <h3>Varnelli, Anisetta Meletti, <span class="price">3,5</span></h3>
                         </li>
                         <li>
                             <h3>Fernet Branca, Brancamente, Montenegro, Amaro del Capo <span class="price">3,5</span></h3>
